--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,11 +52,13 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "ecuador.policianacional.dntic.siipnemovil2"
-        minSdkVersion 17
+        minSdkVersion 19
         versionCode 31
         versionName "1.1.6"
         targetSdkVersion 33
-      //  versionCode flutterVersionCode.toInteger()
+        multiDexEnabled = true
+
+        //  versionCode flutterVersionCode.toInteger()
         resConfigs "en", "fr"
 
     }
