--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,9 +52,9 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "ecuador.policianacional.dntic.siipnemovil2"
-        minSdkVersion 19
-        versionCode 31
-        versionName "1.1.6"
+        minSdkVersion 20
+        versionCode 32
+        versionName "1.1.7"
         targetSdkVersion 33
         multiDexEnabled = true
 
@@ -62,8 +62,9 @@ android {
         resConfigs "en", "fr"
 
     }
+
     lintOptions {
-        disable 'InvalidPackage'
+        checkReleaseBuilds false
     }
     signingConfigs {
         release {
