--- a/android/key.properties
+++ b/android/key.properties
@@ -1,7 +1,7 @@
 storePassword=policiaEcuadorSiipneMovil2
 keyPassword=policiaEcuadorSiipneMovil2
 keyAlias=PoliciaSiipneMovil2
-storeFile=/Users/policianacional/Documents/api_key/keyAppSiipneMovil2.jks
+storeFile=/Users/policianacional/Documents/carpeta sin título/siipne-elecciones-1.1.0.2 LISTOS/api_key/keyAppSiipneMovil2.jks
 
 
 
